WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273505
[WebGPU] useResources: should not be called on empty resource list
https://bugs.webkit.org/show_bug.cgi?id=273505
Summary
[WebGPU] useResources: should not be called on empty resource list
Mike Wyrzykowski
Reported
2024-04-30 10:55:16 PDT
[WebGPU] useResources: should not be called on empty resource list
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-04-30 10:55:28 PDT
radar://127230835
Mike Wyrzykowski
Comment 2
2024-05-01 12:36:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27995
EWS
Comment 3
2024-05-02 20:46:15 PDT
Committed
278300@main
(c368b1bcceb0): <
https://commits.webkit.org/278300@main
> Reviewed commits have been landed. Closing PR #27995 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug